--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
         <div class="hover-reveal"><img src="" id="reveal-img"></div>
 
-        <section class="section" style="padding: 20vh 5vw;">
+        <section id="stats" class="section" style="padding: 20vh 5vw;">
             <div class="w-full border-t border-white/20 mb-10"></div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-20">
                 <div>
@@ -649,7 +649,7 @@
             const oldName = document.getElementById(`title-${id}`).innerText;
             const newName = prompt("Tên mới:", oldName);
             if(newName && newName.trim()) {
-                await fetch(`${API_BASE_URL}/api/conversation/rename/${id}`, { method:'PUT', headers:{'Content-Type':'application/json'}, body: JSON.stringify({title: newName}) });
+                await fetch(`/api/conversation/rename/${id}`, { method:'PUT', headers:{'Content-Type':'application/json'}, body: JSON.stringify({title: newName}) });
                 loadConversationList();
             }
         }
@@ -677,7 +677,7 @@
             document.getElementById('chat-history').insertAdjacentHTML('beforeend', `<div class="msg ai" id="${loadId}"><div class="msg-avatar ai"><i class="fa-solid fa-circle-notch fa-spin"></i></div><div class="msg-content text-gray-500">Processing...</div></div>`);
             
             try {
-                const res = await fetch('/api/chat', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({message:txt, conversation_id:currentConvId}) });
+                const res = await fetch('${API_BASE_URL}/api/chat', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({message:txt, conversation_id:currentConvId}) });
                 document.getElementById(loadId).remove();
                 if(res.status===401) { alert("Hết phiên đăng nhập"); location.reload(); return; }
                 const data = await res.json();
