--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     </button>
 
                     <p class="text-blue-400 text-xs font-bold mb-2 mt-2 tracking-widest uppercase">Lịch sử</p>
-                    <div class="flex-grow overflow-y-auto pr-2 custom-scrollbar" id="conversation-list">
+                    <div class="flex-grow overflow-y-auto pr-2 custom-scrollbar" id="conversation-list" data-lenis-prevent>
                         </div>
 
                     <div class="mt-auto">
@@ -337,7 +337,7 @@
             </div>
 
             <div class="chat-main">
-                <div id="chat-history" class="messages-container">
+                <div id="chat-history" class="messages-container" data-lenis-prevent>
                     <div class="text-center text-gray-500 mt-20">
                         <h2 class="text-2xl font-bold mb-2">FIT HCMUS AI</h2>
                         <p>Bấm "Cuộc trò chuyện mới" để bắt đầu.</p>
